tests/suite/errors/e26_missing_mod_file.rs
// err: cannot find 'missing.rs' or 'missing/mod.rs'

mod missing;

fn main() {}
